fix(client): clean up CSS code for `position: sticky` and `overflow: none`

--- a/client/src/pages/global.css
+++ b/client/src/pages/global.css
@@ -12,8 +12,6 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: var(--text-color);
     font-size: var(--normal);
-    height: 100vh;
-    width: 100vw;
 }
 
 h1 {
